--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/leaflet.css">
-        <link rel="stylesheet" href="css/L.Control.Layers.Tree.css">
-        <link rel="stylesheet" href="css/qgis2web.css">
-        <link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
         html, body, #map {
             width: 100%;
@@ -25,7 +23,6 @@
         </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
-        <script src="js/L.Control.Layers.Tree.min.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
         <script src="js/leaflet.pattern.js"></script>
         <script src="js/leaflet-hash.js"></script>
@@ -33,13 +30,13 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/UrbanStudyRegion_2.js"></script>
-        <script src="data/PublicUrbanGreenSpace_3.js"></script>
-        <script src="data/UGS_LosAngeles_PopGridWithinServiceArea_4.js"></script>
+        <script src="data/UrbanCentreBoundary_2.js"></script>
+        <script src="data/LargePublicUrbanGreenSpace_3.js"></script>
+        <script src="data/AccessibilityGrid_4.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[33.35630865245579,-118.71250437479877],[34.36030543811669,-117.07059391338268]]);
+        }).fitBounds([[33.356095995196455,-118.71327360345133],[34.360422034571094,-117.07574380375821]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -98,7 +95,7 @@
         });
         layer_ESRIWorldImagery_1;
         map.addLayer(layer_ESRIWorldImagery_1);
-        function pop_UrbanStudyRegion_2(feature, layer) {
+        function pop_UrbanCentreBoundary_2(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['study_region'] !== null ? autolinker.link(feature.properties['study_region'].toLocaleString()) : '') + '</td>\
@@ -129,9 +126,9 @@
             popup.setContent(updatedContent);
         }
 
-        function style_UrbanStudyRegion_2_0() {
+        function style_UrbanCentreBoundary_2_0() {
             return {
-                pane: 'pane_UrbanStudyRegion_2',
+                pane: 'pane_UrbanCentreBoundary_2',
                 opacity: 1,
                 color: 'rgba(230,230,230,1.0)',
                 dashArray: '',
@@ -142,21 +139,21 @@
                 interactive: false,
             }
         }
-        map.createPane('pane_UrbanStudyRegion_2');
-        map.getPane('pane_UrbanStudyRegion_2').style.zIndex = 402;
-        map.getPane('pane_UrbanStudyRegion_2').style['mix-blend-mode'] = 'normal';
-        var layer_UrbanStudyRegion_2 = new L.geoJson(json_UrbanStudyRegion_2, {
+        map.createPane('pane_UrbanCentreBoundary_2');
+        map.getPane('pane_UrbanCentreBoundary_2').style.zIndex = 402;
+        map.getPane('pane_UrbanCentreBoundary_2').style['mix-blend-mode'] = 'normal';
+        var layer_UrbanCentreBoundary_2 = new L.geoJson(json_UrbanCentreBoundary_2, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_UrbanStudyRegion_2',
-            layerName: 'layer_UrbanStudyRegion_2',
-            pane: 'pane_UrbanStudyRegion_2',
-            onEachFeature: pop_UrbanStudyRegion_2,
-            style: style_UrbanStudyRegion_2_0,
+            dataVar: 'json_UrbanCentreBoundary_2',
+            layerName: 'layer_UrbanCentreBoundary_2',
+            pane: 'pane_UrbanCentreBoundary_2',
+            onEachFeature: pop_UrbanCentreBoundary_2,
+            style: style_UrbanCentreBoundary_2_0,
         });
-        bounds_group.addLayer(layer_UrbanStudyRegion_2);
-        map.addLayer(layer_UrbanStudyRegion_2);
-        function pop_PublicUrbanGreenSpace_3(feature, layer) {
+        bounds_group.addLayer(layer_UrbanCentreBoundary_2);
+        map.addLayer(layer_UrbanCentreBoundary_2);
+        function pop_LargePublicUrbanGreenSpace_3(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['fid'] !== null ? autolinker.link(feature.properties['fid'].toLocaleString()) : '') + '</td>\
@@ -206,6 +203,12 @@
                     <tr>\
                         <td colspan="2">' + (feature.properties['pugs'] !== null ? autolinker.link(feature.properties['pugs'].toLocaleString()) : '') + '</td>\
                     </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['area'] !== null ? autolinker.link(feature.properties['area'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['perimeter'] !== null ? autolinker.link(feature.properties['perimeter'].toLocaleString()) : '') + '</td>\
+                    </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
             var popup = layer.getPopup();
@@ -214,9 +217,9 @@
             popup.setContent(updatedContent);
         }
 
-        function style_PublicUrbanGreenSpace_3_0() {
+        function style_LargePublicUrbanGreenSpace_3_0() {
             return {
-                pane: 'pane_PublicUrbanGreenSpace_3',
+                pane: 'pane_LargePublicUrbanGreenSpace_3',
                 stroke: false, 
                 fill: true,
                 fillOpacity: 1,
@@ -224,21 +227,21 @@
                 interactive: false,
             }
         }
-        map.createPane('pane_PublicUrbanGreenSpace_3');
-        map.getPane('pane_PublicUrbanGreenSpace_3').style.zIndex = 403;
-        map.getPane('pane_PublicUrbanGreenSpace_3').style['mix-blend-mode'] = 'normal';
-        var layer_PublicUrbanGreenSpace_3 = new L.geoJson(json_PublicUrbanGreenSpace_3, {
+        map.createPane('pane_LargePublicUrbanGreenSpace_3');
+        map.getPane('pane_LargePublicUrbanGreenSpace_3').style.zIndex = 403;
+        map.getPane('pane_LargePublicUrbanGreenSpace_3').style['mix-blend-mode'] = 'normal';
+        var layer_LargePublicUrbanGreenSpace_3 = new L.geoJson(json_LargePublicUrbanGreenSpace_3, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_PublicUrbanGreenSpace_3',
-            layerName: 'layer_PublicUrbanGreenSpace_3',
-            pane: 'pane_PublicUrbanGreenSpace_3',
-            onEachFeature: pop_PublicUrbanGreenSpace_3,
-            style: style_PublicUrbanGreenSpace_3_0,
+            dataVar: 'json_LargePublicUrbanGreenSpace_3',
+            layerName: 'layer_LargePublicUrbanGreenSpace_3',
+            pane: 'pane_LargePublicUrbanGreenSpace_3',
+            onEachFeature: pop_LargePublicUrbanGreenSpace_3,
+            style: style_LargePublicUrbanGreenSpace_3_0,
         });
-        bounds_group.addLayer(layer_PublicUrbanGreenSpace_3);
-        map.addLayer(layer_PublicUrbanGreenSpace_3);
-        function pop_UGS_LosAngeles_PopGridWithinServiceArea_4(feature, layer) {
+        bounds_group.addLayer(layer_LargePublicUrbanGreenSpace_3);
+        map.addLayer(layer_LargePublicUrbanGreenSpace_3);
+        function pop_AccessibilityGrid_4(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['grid_id'] !== null ? autolinker.link(feature.properties['grid_id'].toLocaleString()) : '') + '</td>\
@@ -266,9 +269,9 @@
             popup.setContent(updatedContent);
         }
 
-        function style_UGS_LosAngeles_PopGridWithinServiceArea_4_0() {
+        function style_AccessibilityGrid_4_0() {
             return {
-                pane: 'pane_UGS_LosAngeles_PopGridWithinServiceArea_4',
+                pane: 'pane_AccessibilityGrid_4',
                 opacity: 1,
                 color: 'rgba(119,61,128,0.5)',
                 dashArray: '',
@@ -281,20 +284,20 @@
                 interactive: false,
             }
         }
-        map.createPane('pane_UGS_LosAngeles_PopGridWithinServiceArea_4');
-        map.getPane('pane_UGS_LosAngeles_PopGridWithinServiceArea_4').style.zIndex = 404;
-        map.getPane('pane_UGS_LosAngeles_PopGridWithinServiceArea_4').style['mix-blend-mode'] = 'normal';
-        var layer_UGS_LosAngeles_PopGridWithinServiceArea_4 = new L.geoJson(json_UGS_LosAngeles_PopGridWithinServiceArea_4, {
+        map.createPane('pane_AccessibilityGrid_4');
+        map.getPane('pane_AccessibilityGrid_4').style.zIndex = 404;
+        map.getPane('pane_AccessibilityGrid_4').style['mix-blend-mode'] = 'normal';
+        var layer_AccessibilityGrid_4 = new L.geoJson(json_AccessibilityGrid_4, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_UGS_LosAngeles_PopGridWithinServiceArea_4',
-            layerName: 'layer_UGS_LosAngeles_PopGridWithinServiceArea_4',
-            pane: 'pane_UGS_LosAngeles_PopGridWithinServiceArea_4',
-            onEachFeature: pop_UGS_LosAngeles_PopGridWithinServiceArea_4,
-            style: style_UGS_LosAngeles_PopGridWithinServiceArea_4_0,
+            dataVar: 'json_AccessibilityGrid_4',
+            layerName: 'layer_AccessibilityGrid_4',
+            pane: 'pane_AccessibilityGrid_4',
+            onEachFeature: pop_AccessibilityGrid_4,
+            style: style_AccessibilityGrid_4_0,
         });
-        bounds_group.addLayer(layer_UGS_LosAngeles_PopGridWithinServiceArea_4);
-        map.addLayer(layer_UGS_LosAngeles_PopGridWithinServiceArea_4);
+        bounds_group.addLayer(layer_AccessibilityGrid_4);
+        map.addLayer(layer_AccessibilityGrid_4);
             var abstract = new L.Control({'position':'topright'});
             abstract.onAdd = function (map) {
                 this._div = L.DomUtil.create('div',
@@ -307,7 +310,7 @@
                 abstract.show = function () {
                     this._div.classList.remove("abstract");
                     this._div.classList.add("abstractUncollapsed");
-                    this._div.innerHTML = 'Los Angeles - 2025 Projection<br>Public Urban Green Space Accessibility';
+                    this._div.innerHTML = 'Los Angeles, USA<br>Large Public Urban Green Space Accessibility';
             };
             abstract.addTo(map);
             var abstract2 = new L.Control({ 'position': 'topright' });
@@ -320,26 +323,11 @@
                 abstract2.show = function () {
                     this._div.classList.remove("abstract");
                     this._div.classList.add("abstract2");
-                    this._div.innerHTML = "30.44% of Los Angele's estimated 2025 population have access to public urban green space of area ≥1 ha within 500 m pedestrian network distance";
+                    this._div.innerHTML = "29.66% of Los Angeles's estimated 2025 population have access to public urban green space of area ≥1 ha within 500 m pedestrian network distance";
                 };
                 abstract2.addTo(map);
         var baseMaps = {};
-        var overlaysTree = [
-            {label: '<img src="legend/UGS_LosAngeles_PopGridWithinServiceArea_4.png" /> Access to public urban green space<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;of area ≥1 hectare within 500 m<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pedestrian network distance', layer: layer_UGS_LosAngeles_PopGridWithinServiceArea_4},
-            {label: '<img src="legend/PublicUrbanGreenSpace_3.png" /> Public Urban Green Space', layer: layer_PublicUrbanGreenSpace_3},
-            {label: '<img src="legend/UrbanStudyRegion_2.png" /> Urban Study Region', layer: layer_UrbanStudyRegion_2},
-            {label: "ESRI World Imagery", layer: layer_ESRIWorldImagery_1},
-            {label: "OSM Standard", layer: layer_OSMStandard_0},]
-        var lay = L.control.layers.tree(null, overlaysTree,{
-            //namedToggle: true,
-            //selectorBack: false,
-            //closedSymbol: '&#8862; &#x1f5c0;',
-            //openedSymbol: '&#8863; &#x1f5c1;',
-            //collapseAll: 'Collapse all',
-            //expandAll: 'Expand all',
-            collapsed: false, 
-        });
-        lay.addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/AccessibilityGrid_4.png" /> Access to large public urban green space<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;of area ≥1 hectare within 500 m<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pedestrian network distance': layer_AccessibilityGrid_4,'<img src="legend/LargePublicUrbanGreenSpace_3.png" /> Large Public Urban Green Space': layer_LargePublicUrbanGreenSpace_3,'<img src="legend/UrbanCentreBoundary_2.png" /> Urban Centre Boundary': layer_UrbanCentreBoundary_2,"ESRI World Imagery": layer_ESRIWorldImagery_1,"OSM Standard": layer_OSMStandard_0,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
