--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 abstract2.show = function () {
                     this._div.classList.remove("abstract");
                     this._div.classList.add("abstract2");
-                    this._div.innerHTML = "29.66% of Los Angeles's estimated 2025 population have access to public urban green space of area ≥1 ha within 500 m pedestrian network distance";
+                    this._div.innerHTML = "29.66% of Los Angeles's estimated 2025 population have access to large public urban green space of area ≥1 ha within 500 m pedestrian network distance";
                 };
                 abstract2.addTo(map);
         var baseMaps = {};
